<resources>
    <string name="app_name">Assignment 2</string>
<!--menu items-->
    <string name="action_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
<!--   fragment labels-->
    <string name="roller_fragment_label">Roller</string>
    <string name="history_fragment_label">History</string>
    <string name="total">Total</string>
    <string name="roll">Roll</string>
    <string name="txt_die_1">_</string>
    <string name="txt_die_2">_</string>
    <string name="txt_die_3">_</string>
    <string name="empty">_</string>
    <string name="score">0</string>
<!--    Clear-->
    <string name="confirm_clear_title">Confirm Clear</string>
    <string name="confirm_clear_on">Ask to confirm clearing the history</string>
    <string name="confirm_clear_off">Don\'t ask to confirm clearing the history</string>

    <!-- confirmation dialog -->
    <string name="confirm_delete_message">Do you want to remove this message?</string>
    <string name="confirm_clear_message">Do you want to clear the history?</string>

    <!-- the history fragment -->
    <string name="count">%1$d.</string>
    <plurals name="history_total">
        <item quantity="one">Total: %1$d </item>
        <item quantity="other">Total: %1$d </item>
    </plurals>

</resources>