<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/Green100"
    tools:context=".ui.roller.RollerFragment">
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/ic_dialog_dialer" />

    <TextView
        android:id="@+id/die1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_die_1"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/die2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_die_2"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/die3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_die_3"
        android:textSize="30sp" />

    <Button
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/roll" />
    <TextView
        android:id="@+id/sum_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="30sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


</LinearLayout>
</layout>